# diffusion-models-learning

./: .gitignore  README.md  pyproject.toml
diffusors/: ddpm.py
diffusors/helpers/: jax.py
diffusors/model/jax/: blocks.py  model.py
docs/latex/: command.sty  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  refs.bib  refs.bib.bak
notebooks/: DDPM.ipynb  diffusion-models.ipynb  ode-diffusion.ipynb
