[tool.poetry]
name = "diffusion-models-learning"
version = "0.1.0"
description = ""
authors = ["Haru4me <durdaev2010@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "diffusion_models_learning"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"
matplotlib = "^3.6.3"
tqdm = "^4.64.1"
einops = "^0.6.0"
torchdiffeq = "^0.2.3"
jax = "^0.4.5"
flax = "^0.6.6"
optax = "^0.1.4"
distrax = "^0.1.3"
chex = "^0.1.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
